test/testData/parser/negative/expressions/unaryOps.err
test/testData/parser/negative/expressions/unaryOps.c:17:3: error: address of register variable requested
test/testData/parser/negative/expressions/unaryOps.c:17:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:18:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:19:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:20:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:21:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:22:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:23:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:24:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:25:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:30:3: error: indirection requires pointer operand ('signed int' invalid)
test/testData/parser/negative/expressions/unaryOps.c:31:3: error: indirection requires pointer operand ('float' invalid)
test/testData/parser/negative/expressions/unaryOps.c:32:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:33:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:34:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:35:3: error: indirection requires pointer operand ('STRUCT S' invalid)
test/testData/parser/negative/expressions/unaryOps.c:36:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:42:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:43:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:44:3: error: invalid argument type '*signed int' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:45:3: error: invalid argument type '*float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:46:3: error: invalid argument type 'signed int[20]' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:47:3: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:48:3: error: invalid argument type '*STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:49:3: error: invalid argument type '*void' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:54:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:55:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:56:3: error: invalid argument type '*signed int' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:57:3: error: invalid argument type '*float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:58:3: error: invalid argument type 'signed int[20]' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:59:3: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:60:3: error: invalid argument type '*STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:61:3: error: invalid argument type '*void' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:66:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:67:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:68:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:69:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:70:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:71:3: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:72:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:73:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:78:3: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:79:3: error: invalid argument type 'float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:80:3: error: invalid argument type '*signed int' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:81:3: error: invalid argument type '*float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:82:3: error: invalid argument type 'signed int[20]' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:83:3: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:84:3: error: invalid argument type '*STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:85:3: error: invalid argument type '*void' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:94:3: error: cannot increment value of type 'signed int[20]'
test/testData/parser/negative/expressions/unaryOps.c:95:3: error: cannot increment value of type 'STRUCT S'
test/testData/parser/negative/expressions/unaryOps.c:106:3: error: cannot decrement value of type 'signed int[20]'
test/testData/parser/negative/expressions/unaryOps.c:107:3: error: cannot decrement value of type 'STRUCT S'
